--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,9 @@
     "require": {
         "flightphp/core": "^3.17",
         "latte/latte": "^3.0"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.13",
+        "phpstan/phpstan": "^2.1"
     }
 }
