Use middleware to set a variable containing the flash message

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/classes/"
+        }
+    },
     "require": {
         "flightphp/core": "^3.17",
         "latte/latte": "^3.0"
